--- a/.github/workflows/postman-tests.yml
+++ b/.github/workflows/postman-tests.yml
@@ -2,6 +2,8 @@ name: Run Postman tests with Newman
 
 on:
   push:
+  branches:
+      - main
     paths:
       - 'collection/**'
   workflow_dispatch:
