--- a/.github/workflows/postman-tests.yml
+++ b/.github/workflows/postman-tests.yml
@@ -3,10 +3,10 @@ name: Run Postman tests with Newman
 on:
   push:
     branches:
-      - main
+      - github-actions
     paths:
       - 'collection/**'
-  workflow_dispatch:
+  workflow_dispatch: {}
 
 jobs:
   postman-tests:
