return trigger github-actions branch

--- a/.github/workflows/postman-tests.yml
+++ b/.github/workflows/postman-tests.yml
@@ -3,6 +3,7 @@ name: Run Postman tests with Newman
 on:
   push:
     branches:
+      - github-actions
       - main
     paths:
       - 'collection/**'
